--- a/Clinic/Views/Shared/Layout/MainLayout.cshtml
+++ b/Clinic/Views/Shared/Layout/MainLayout.cshtml
@@ -196,6 +196,17 @@
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!--Departments-->
                         <li class="nav-item">
+                            <a asp-controller="Home" asp-action="Index" class="nav-link">
+                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <p>
+                                    Dashboard
+                                </p>
+                            </a>
+                            
+                        </li>
+                        
+                        <!--Departments-->
+                        <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
@@ -379,7 +390,7 @@
     <!-- overlayScrollbars -->
     <script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <script src="~/dist/js/adminlte.js"></script>
-    <script src="~/dist/js/demo.js"></script>
+  @*  <script src="~/dist/js/demo.js"></script>*@
     <script src="~/dist/js/pages/dashboard.js"></script>
 </body>
 </html>
