--- a/Clinic/Views/Shared/Layout/MainLayout.cshtml
+++ b/Clinic/Views/Shared/Layout/MainLayout.cshtml
@@ -390,6 +390,8 @@
     <!-- overlayScrollbars -->
     <script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <script src="~/dist/js/adminlte.js"></script>
+    <script src="~/dist/js/demo.js"></script>
+
   @*  <script src="~/dist/js/demo.js"></script>*@
     <script src="~/dist/js/pages/dashboard.js"></script>
 </body>
