--- a/Clinic/Views/Shift/GetAll.cshtml
+++ b/Clinic/Views/Shift/GetAll.cshtml
@@ -132,6 +132,7 @@
 <script src="~/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
 
 <script src="~/dist/js/adminlte.min.js"></script>
+<script src="~/dist/js/demo.js"></script>
 <script>
     $(function () {
         $("#example1").DataTable({
